--- a/weekly-notes/week-01-notes.qmd
+++ b/weekly-notes/week-01-notes.qmd
@@ -1,11 +1,18 @@
 ---
 title: "Week 1 Notes - Course Introduction"
-date: "2025-09-08"
+date: "2025-09-09"
 ---
 
 ## Key Concepts Learned
-- [List main concepts from lecture]
-- [Technical skills covered]
+- Git
+-- version control system
+- GitHub
+-- clouding hosting
+- Key GitHub Concepts
+1. Repository(repo)
+2. Commit
+3. Push
+4. Pull
 
 ## Coding Techniques
 - [New R functions or approaches]
