--- a/index.qmd
+++ b/index.qmd
@@ -15,7 +15,7 @@ Advanced spatial analysis and data science for urban planning and public policy.
 - **Final Project:** Capstone modeling challenge
 
 ## About Me
-ESFP
+A RANDOM PERSON
 
 ## Contact
 - Email: cui12@upenn.edu
