--- a/assignments/assignment_1/assignment1_template.qmd
+++ b/assignments/assignment_1/assignment1_template.qmd
@@ -420,6 +420,7 @@ Consequently, any algorithm relying on this demographic data in these counties w
 4. **Strategic Recommendations**: What should the Department implement to address these systematic issues?
 
 **Executive Summary:**
+
 The analysis reveals a two-tiered, systematic breakdown in data reliability:
 County Level: High Margin of Error (MOE), some exceeding 60%, is concentrated in sparsely populated counties like Jeff Davis and Culberson. These areas immediately fail basic reliability thresholds for household income estimates.
 Tract Level: In the targeted focus areas—selected to represent the full spectrum of county-level reliability—100% of all tracts examined fell into the High Uncertainty category (MOE>15% on demographic variables). This means data quality completely collapses at the neighborhood level within these regions, rendering reliable demographic data universally insufficient for allocation decisions.
@@ -474,31 +475,38 @@ mutate(
 **Your Task:** Use your analysis results to provide specific guidance to the department.
 
 1. **Counties suitable for immediate algorithmic implementation:** [List counties with high confidence data and explain why they're appropriate]
+Counties categorized as High Confidence (those with median income MOE below 5%) are suitable. These typically include large, urban counties with stable estimates, such as Harris or Dallas County. They are appropriate because their data is statistically stable, meaning resource allocations based on the income estimates are highly reliable (>95% certainty), minimizing the risk of systemic misallocation.
 
 2. **Counties requiring additional oversight:** [List counties with moderate confidence data and describe what kind of monitoring would be needed]
+Counties categorized as Moderate Confidence (median income MOE between 5% and 10%) should be deployed with caution. The Department must implement real-time monitoring to compare algorithmic allocation decisions against actual service uptake and ground-level case worker reports. A 5%-10% uncertainty range requires human oversight to validate outcomes and trigger manual review if the allocation pattern appears to deviate significantly from expected need.
 
 3. **Counties needing alternative approaches:** [List counties with low confidence data and suggest specific alternatives - manual review, additional surveys, etc.]
+All Low Confidence counties (MOE>10%), especially those with extreme uncertainty like Jeff Davis (MOE≈66%) and Culberson (MOE≈53%), must have standard algorithmic application immediately suspended. For these areas, where tract-level data is universally unreliable and serves high Hispanic populations, the Department must transition to manual case worker review for needs assessment, or invest in small, targeted administrative surveys (e.g., using food security or Medicaid data) as a more reliable proxy for need than the ACS income estimates.
 
 ## Questions for Further Investigation
 
 [List 2-3 questions that your analysis raised that you'd like to explore further in future assignments. Consider questions about spatial patterns, time trends, or other demographic factors.]
+1. How do the tracts flagged with High MOE cluster geographically, and is there a measurable correlation between these clusters and existing disparities in access to Department resources or social infrastructure?
+2. Beyond the Hispanic population, are High MOE issues equally prevalent across other small, concentrated minority groups (e.g., specific Native American or Asian subgroups), or is the sample size challenge uniquely impacting the Hispanic population in the Texas border regions?
 
 # Technical Notes
 
 **Data Sources:** 
 - U.S. Census Bureau, American Community Survey 2018-2022 5-Year Estimates
-- Retrieved via tidycensus R package on [date]
+- Retrieved via tidycensus R package on September 19, 2025
 
 **Reproducibility:** 
 - All analysis conducted in R version [your version]
 - Census API key required for replication
-- Complete code and documentation available at: [your portfolio URL]
+- Complete code and documentation available at: https://github.com/MUSA-5080-Fall-2025/portfolio-setup-ChristineCui12
 
 **Methodology Notes:**
 [Describe any decisions you made about data processing, county selection, or analytical choices that might affect reproducibility]
+The analysis employed several deliberate choices to focus the data quality evaluation. First, all estimates were sourced from the American Community Survey (ACS) 2018-2022 5-Year Estimates to ensure the most geographically detailed and statistically stable data available for tract-level analysis. Second, the three focus counties were intentionally selected based on the MOE analysis to represent the extremes of data reliability (High, Moderate, Low Confidence MOE ranges) rather than simply picking counties near the confidence boundaries. This was done to maximize the observed contrast in data quality patterns during the tract-level deep dive. **Third, a conservative 15% MOE threshold was set for the tract-level demographic variables. If the MOE for any of the three major demographic groups (White, Black, Hispanic) exceeded this threshold, the entire tract was flagged as High MOE.**
 
 **Limitations:**
 [Note any limitations in your analysis - sample size issues, geographic scope, temporal factors, etc.]
+The findings are restricted to Texas and the three specifically selected counties. The conclusion that 100% of tracts in the focus area are unreliable is an extreme finding that may not be generalizable to counties in other parts of the state or country. Besides, the use of 5-Year ACS estimates means the data represents a rolling average from 2018 to 2022. This dampens volatility but may mask rapid economic changes or population shifts that have occurred since the beginning of the period.
 
 ---
 
@@ -506,12 +514,12 @@ mutate(
 
 Before submitting your portfolio link on Canvas:
 
-- [ ] All code chunks run without errors
-- [ ] All "[Fill this in]" prompts have been completed
-- [ ] Tables are properly formatted and readable
-- [ ] Executive summary addresses all four required components
-- [ ] Portfolio navigation includes this assignment
-- [ ] Census API key is properly set 
-- [ ] Document renders correctly to HTML
+- [√] All code chunks run without errors
+- [√] All "[Fill this in]" prompts have been completed
+- [√] Tables are properly formatted and readable
+- [√] Executive summary addresses all four required components
+- [√] Portfolio navigation includes this assignment
+- [√] Census API key is properly set 
+- [√] Document renders correctly to HTML
 
 **Remember:** Submit your portfolio URL on Canvas, not the file itself. Your assignment should be accessible at `your-portfolio-url/assignments/assignment_1/your_file_name.html`
