--- a/assignments/assignment_1/assignment1_template.qmd
+++ b/assignments/assignment_1/assignment1_template.qmd
@@ -82,15 +82,15 @@ my_state <- "TX"
 ```{r county-data}
 # Write your get_acs() code here
 county_data_texas <- get_acs(
-  geography = "county",        # 检索县级数据
-  variables = c(                # 指定要获取的变量及其描述性名称
+  geography = "county",        
+  variables = c(               
     median_household_income = "B19013_001",
     total_population = "B01003_001"
   ),
-  state = my_state,            # 指定州
-  year = 2022,                 # 指定年份
-  survey = "acs5",             # 指定使用5年期调查
-  output = "wide"              # 指定输出为宽格式
+  state = my_state,            
+  year = 2022,                 
+  survey = "acs5",             
+  output = "wide"              
 )
 
 # Clean the county names to remove state name and "County" 
@@ -247,13 +247,13 @@ selected_county_geoids <- selected_counties$GEOID
 selected_county_codes <- str_sub(selected_county_geoids, start = -3) #the last 3 numbers of GEOID is county codes
 
 tract_data_texas <- get_acs(
-  geography = "tract",        # 普查区级别
-  variables = ethnicity_variables,         # 指定要获取的变量及其描述性名称
-  state = my_state,            # 指定州
-  county = selected_county_codes, # 将县的 GEOID 作为 county 参数
-  year = 2022,                 # 指定年份
-  survey = "acs5",             # 指定使用5年期调查
-  output = "wide"              # 指定输出为宽格式
+  geography = "tract",        
+  variables = ethnicity_variables,         
+  state = my_state,           
+  county = selected_county_codes, 
+  year = 2022,                 
+  survey = "acs5",             
+  output = "wide"             
 )
 
 # Calculate percentage of each group using mutate()
@@ -285,7 +285,7 @@ head(tract_data_texas)
 # Hint: use arrange() and slice() to get the top tract
 
 top_hispanic_tract <- tract_data_texas %>%
-  # 1. 按照 Hispanic/Latino 百分比 (pct_hispanic) 降序排列
+  # 按照 Hispanic/Latino 百分比 (pct_hispanic) 降序排列
   arrange(desc(pct_hispanic)) %>%
   slice(1)
 top_hispanic_tract %>%
@@ -302,14 +302,12 @@ county_demographics_summary <- tract_data_texas %>%
   # 2. 计算每个县的汇总统计量
   summarize(
     number_of_tracts = n(),
-    # 计算各族裔/种族群体的平均百分比
     avg_pct_white = mean(pct_white, na.rm = TRUE),
     avg_pct_black = mean(pct_black, na.rm = TRUE),
     avg_pct_hispanic = mean(pct_hispanic, na.rm = TRUE),
-    # 计算县的总人口 (可以选择计算所有普查区人口的总和)
     total_population_E = sum(total_populationE, na.rm = TRUE),
   )
-  # 3. 格式化并展示结果
+  
   county_demographics_summary %>%
     select(
       `County` = County,
@@ -319,7 +317,7 @@ county_demographics_summary <- tract_data_texas %>%
       `Avg Hispanic/%` = avg_pct_hispanic,
       `Total Pop` = total_population_E
     ) %>%
-    # 使用 kable() 格式化输出为表格
+    
     kable(
       caption = "Average Demographics by County",
       digits = 2
@@ -392,7 +390,7 @@ tract_reliability_comparison %>%
     `Avg White/%` = Avg_Pct_White,
     `Avg Black/%` = Avg_Pct_Black,
     `Avg Hispanic/%` = Avg_Pct_Hispanic
-  ) %>%             # <-- KEY：使用管道符将数据框传递给 kable
+  ) %>%             # KEY：使用管道符将数据框传递给 kable
   kable(
     caption = "Comparison of Tract Characteristics by Data Reliability",
     digits = 2
@@ -400,11 +398,8 @@ tract_reliability_comparison %>%
 ```
 
 **Pattern Analysis:** 
-The analysis reveals an extreme, systemic data quality issue: 100% of the tracts in the selected focus areas fall into the High MOE category. This means data reliability is not merely poor in isolated cases, but universally insufficient across these neighborhoods.
 
-The average population size for all these unreliable tracts is around 5,345 people, with a high average concentration of Hispanic residents (61.29%). This pattern strongly suggests that in small, high-minority counties, the reliability of demographic estimates completely breaks down at the tract level. The lack of sufficient sample size in these relatively small, rural, tracts makes the ACS data inherently unstable.
-
-Consequently, any algorithm relying on this demographic data in these counties would be making resource allocation decisions based on pure statistical uncertainty, disproportionately impacting Hispanic-majority communities with unreliable information.
+The analysis reveals an extreme, systemic data quality issue: 100% of the tracts in the selected focus areas fall into the High MOE category. This means data reliability is not merely poor in isolated cases, but universally insufficient across these tracts. The average population size for all these unreliable tracts is around 5,345 people, with a high average concentration of Hispanic residents (61.29%). This pattern strongly suggests that in small, high-minority counties, the reliability of demographic estimates completely breaks down at the tract level. The lack of sufficient sample size in these relatively small, rural, tracts makes the ACS data inherently unstable. Consequently, any algorithm relying on this demographic data in these counties would be making resource allocation decisions based on pure statistical uncertainty, disproportionately impacting Hispanic-majority communities with unreliable information.
 
 
 # Part 5: Policy Recommendations
@@ -421,18 +416,18 @@ Consequently, any algorithm relying on this demographic data in these counties w
 
 **Executive Summary:**
 
-The analysis reveals a two-tiered, systematic breakdown in data reliability:
-County Level: High Margin of Error (MOE), some exceeding 60%, is concentrated in sparsely populated counties like Jeff Davis and Culberson. These areas immediately fail basic reliability thresholds for household income estimates.
-Tract Level: In the targeted focus areas—selected to represent the full spectrum of county-level reliability—100% of all tracts examined fell into the High Uncertainty category (MOE>15% on demographic variables). This means data quality completely collapses at the neighborhood level within these regions, rendering reliable demographic data universally insufficient for allocation decisions.
+The analysis reveals a two-type, systematic breakdown in data reliability:
+At the county level, high MOE is concentrated in sparsely populated counties like Jeff Davis and Culberson. These areas immediately fail basic reliability thresholds for household income estimates.
+At the county level, 100% of all tracts examined fell into the High Uncertainty category, showing an MOE greater than 15% on demographic variables. This means data quality completely collapses at the neighborhood level within these regions, making reliable demographic information universally insufficient for use in funding or allocation decisions.
 
-The communities facing the greatest risk of algorithmic bias are those defined by small population size and high minority concentration. The High MOE tracts show a distinct demographic profile, with an average of over 61% Hispanic residents. An algorithm relying on these unstable estimates will apply the highest level of statistical guesswork—with MOE values that often double the estimate—to resource decisions concerning these Hispanic-majority communities. This introduces a serious risk of systemic bias, where funding allocation is based on conjecture rather than precise, equitable data.
+Communities with the highest risk of algorithmic bias are those that are small, rural, and possess a high concentration of minority residents. The tracts flagged as universally unreliable show an average of 61.29% Hispanic residents. Algorithms relying on this fundamentally flawed data risk systematically under-serving these communities, as any resource allocation based on the estimate would carry a high degree of statistical uncertainty, effectively rendering the data unusable for precise needs assessment.
 
 The underlying factor driving both data quality issues and the resulting bias risk is the insufficient statistical sample size combined with geographical isolation. In sparsely populated, often rural counties, the ACS cannot collect enough household responses to produce stable estimates for either income or demographics. Because high-minority communities are overrepresented in these low-population areas in Texas, the data gaps systematically align with ethnic lines, translating a statistical problem into an undeniable equity problem.
 
-To mitigate this systemic risk and ensure equitable allocation, the Department should implement the following strategic measures:
-1. Mandatory Reliability Threshold: Implement a strict rule requiring that any data used by the allocation algorithm must have an MOE percentage below a pre-defined threshold (e.g., 10%). Funding allocation logic must be halted if this threshold is breached.
-2. Data Disaggregation Protocol: For all counties or tracts flagged as "High Uncertainty" (MOE>15% on key variables), the algorithm must default to using supplementary, non-ACS data (such as administrative program enrollment records, local school data, or poverty indices) rather than relying on unreliable census estimates.
-3. Human Review Flag: Program the algorithm to automatically flag and defer funding decisions for any tract with high data uncertainty to a human review committee, ensuring local context and qualitative data are applied where quantitative data is weakest.
+To reduce this systemic risk and ensure equitable allocation, the Department should implement the following strategic measures:
+1. Implement a strict rule requiring that any data used by the allocation algorithm must have an MOE percentage below a pre-defined threshold (e.g., 10%). Funding allocation logic must be halted if this threshold is breached.
+2. For all counties or tracts flagged as "High Uncertainty" (MOE>15%), the algorithm must default to using supplementary, non-ACS data rather than relying on unreliable census estimates.
+3. Program the algorithm to automatically flag and defer funding decisions for any tract with high data uncertainty to a human review committee, ensuring local context and qualitative data are applied where quantitative data is weakest.
 
 
 ## 6.3 Specific Recommendations
@@ -474,19 +469,22 @@ mutate(
 
 **Your Task:** Use your analysis results to provide specific guidance to the department.
 
-1. **Counties suitable for immediate algorithmic implementation:** [List counties with high confidence data and explain why they're appropriate]
+1. **Counties suitable for immediate algorithmic implementation:** 
+
 Counties categorized as High Confidence (those with median income MOE below 5%) are suitable. These typically include large, urban counties with stable estimates, such as Harris or Dallas County. They are appropriate because their data is statistically stable, meaning resource allocations based on the income estimates are highly reliable (>95% certainty), minimizing the risk of systemic misallocation.
 
-2. **Counties requiring additional oversight:** [List counties with moderate confidence data and describe what kind of monitoring would be needed]
+2. **Counties requiring additional oversight:** 
+
 Counties categorized as Moderate Confidence (median income MOE between 5% and 10%) should be deployed with caution. The Department must implement real-time monitoring to compare algorithmic allocation decisions against actual service uptake and ground-level case worker reports. A 5%-10% uncertainty range requires human oversight to validate outcomes and trigger manual review if the allocation pattern appears to deviate significantly from expected need.
 
-3. **Counties needing alternative approaches:** [List counties with low confidence data and suggest specific alternatives - manual review, additional surveys, etc.]
-All Low Confidence counties (MOE>10%), especially those with extreme uncertainty like Jeff Davis (MOE≈66%) and Culberson (MOE≈53%), must have standard algorithmic application immediately suspended. For these areas, where tract-level data is universally unreliable and serves high Hispanic populations, the Department must transition to manual case worker review for needs assessment, or invest in small, targeted administrative surveys (e.g., using food security or Medicaid data) as a more reliable proxy for need than the ACS income estimates.
+3. **Counties needing alternative approaches:** 
+
+All Low Confidence counties (MOE>10%), especially those with extreme uncertainty like Jeff Davis (MOE≈66%) and Culberson (MOE≈53%), must have standard algorithmic application immediately suspended. For these areas, where tract-level data is universally unreliable and serves high Hispanic populations, the Department must transition to manual case worker review for needs assessment, or invest in small, targeted administrative surveys as a more reliable proxy for need than the ACS income estimates.
 
 ## Questions for Further Investigation
 
-[List 2-3 questions that your analysis raised that you'd like to explore further in future assignments. Consider questions about spatial patterns, time trends, or other demographic factors.]
 1. How do the tracts flagged with High MOE cluster geographically, and is there a measurable correlation between these clusters and existing disparities in access to Department resources or social infrastructure?
+
 2. Beyond the Hispanic population, are High MOE issues equally prevalent across other small, concentrated minority groups (e.g., specific Native American or Asian subgroups), or is the sample size challenge uniquely impacting the Hispanic population in the Texas border regions?
 
 # Technical Notes
@@ -496,16 +494,16 @@ All Low Confidence counties (MOE>10%), especially those with extreme uncertainty
 - Retrieved via tidycensus R package on September 19, 2025
 
 **Reproducibility:** 
-- All analysis conducted in R version [your version]
+- All analysis conducted in R version 4.5.1
 - Census API key required for replication
 - Complete code and documentation available at: https://github.com/MUSA-5080-Fall-2025/portfolio-setup-ChristineCui12
 
 **Methodology Notes:**
-[Describe any decisions you made about data processing, county selection, or analytical choices that might affect reproducibility]
-The analysis employed several deliberate choices to focus the data quality evaluation. First, all estimates were sourced from the American Community Survey (ACS) 2018-2022 5-Year Estimates to ensure the most geographically detailed and statistically stable data available for tract-level analysis. Second, the three focus counties were intentionally selected based on the MOE analysis to represent the extremes of data reliability (High, Moderate, Low Confidence MOE ranges) rather than simply picking counties near the confidence boundaries. This was done to maximize the observed contrast in data quality patterns during the tract-level deep dive. **Third, a conservative 15% MOE threshold was set for the tract-level demographic variables. If the MOE for any of the three major demographic groups (White, Black, Hispanic) exceeded this threshold, the entire tract was flagged as High MOE.**
+
+The analysis employed several deliberate choices to focus the data quality evaluation. First, all estimates were sourced from the American Community Survey (ACS) 2018-2022 5-Year Estimates to ensure the most geographically detailed and statistically stable data available for tract-level analysis. Second, the three focus counties were intentionally selected based on the MOE analysis to represent the extremes of data reliability (High, Moderate, Low Confidence MOE ranges) rather than simply picking counties near the confidence boundaries. This was done to maximize the observed contrast in data quality patterns during the tract-level deep dive. Third, a conservative 15% MOE threshold was set for the tract-level demographic variables. If the MOE for any of the three major demographic groups (White, Black, Hispanic) exceeded this threshold, the entire tract was flagged as High MOE.
 
 **Limitations:**
-[Note any limitations in your analysis - sample size issues, geographic scope, temporal factors, etc.]
+
 The findings are restricted to Texas and the three specifically selected counties. The conclusion that 100% of tracts in the focus area are unreliable is an extreme finding that may not be generalizable to counties in other parts of the state or country. Besides, the use of 5-Year ACS estimates means the data represents a rolling average from 2018 to 2022. This dampens volatility but may mask rapid economic changes or population shifts that have occurred since the beginning of the period.
 
 ---
